@@ -174,6 +174,7 @@ class S2DaoClassLoader {
         'S2Dao_MySQLProcedureMetaDataImpl' => '/dao/util/procedure/S2Dao_MySQLProcedureMetaDataImpl.class.php',
         'S2Dao_OracleProcedureMetaDataImpl' => '/dao/util/procedure/S2Dao_OracleProcedureMetaDataImpl.class.php',
         'S2Dao_PostgreSQLProcedureMetaDataImpl' => '/dao/util/procedure/S2Dao_PostgreSQLProcedureMetaDataImpl.class.php',
+        'S2Dao_SQLiteProcedureMetaDataImpl' => '/dao/util/procedure/S2Dao_SQLiteProcedureMetaDataImpl.class.php',
         'S2Dao_ProcedureMetaDataFactory' => '/dao/util/procedure/S2Dao_ProcedureMetaDataFactory.class.php',
         'S2Dao_ProcedureInfo' => '/dao/util/procedure/S2Dao_ProcedureInfo.class.php',
         'S2Dao_ProcedureType' => '/dao/util/procedure/S2Dao_ProcedureType.class.php',
