@@ -12,6 +12,8 @@ class S2Dao_ProcedureMetaDataFactory {
             return new S2Dao_MySQLProcedureMetaDataImpl($connection, $dbms);
         } else if($dbms instanceof S2Dao_PostgreSQL){
             return new S2Dao_PostgreSQLProcedureMetaDataImpl($connection, $dbms);
+        } else if($dbms instanceof S2Dao_SQLite){
+            return new S2Dao_SQLiteProcedureMetaDataImpl($connection, $dbms);
         } else {
             throw new Exception('not supported ' . get_class($dbms));
         }
